--- a/.jshintrc
+++ b/.jshintrc
@@ -14,6 +14,7 @@
     "brackets": true,
     "CodeMirror": true,
     "Mustache": true,
-    "setTimeout": true
+    "setTimeout": true,
+    "less": true
   }
 }
